finish off readonly

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
   <div>
     <div>
-      Hour difference between now and index 0: <input type="text" id="hour-diff" />
+      Hour difference between now and index 0: <input type="text" id="hour-diff" readonly />
     </div>
     <div>
-      Route Table Index: <input type="text" id="route-table-index" />
-      Next Route Table Index: <input type="text" id="route-table-index-next" />
+      Route Table Index: <input type="text" id="route-table-index" readonly />
+      Next Route Table Index: <input type="text" id="route-table-index-next" readonly />
     <div>
   </div>
   
