update epoch to before 5.4

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <script>
     var millisecondToHourRatio = 60*60*1000;
     var lengthOfIDKRouteTable = 144;
-    var epochUTCDate = Date.UTC(2021, 0, 5, 16, 0, 0);
+    var epochUTCDate = Date.UTC(2020, 10, 30, 16, 0, 0); // Nov 30 2020, 16pm UTC    
     var hoursPerPeriod = 2;
 
     function getUTCFormattedDateTime(date) {      
